adapt tmux conf to kitty

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,9 @@ set-option -g detach-on-destroy off
 set -g set-clipboard on
 bind x kill-pane
 
+# Reload tmux config
+bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded!"
+
 # plugin list
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux#v2.1.3'
@@ -48,6 +51,10 @@ set -agF status-right "#{E:@catppuccin_status_battery}"
 set -g @sessionx-bind 'o'
 set -g @sessionx-zoxide-mode 'on'
 
+# Kitty settings
+
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-kitty:RGB"
 
 
 run '~/.tmux/plugins/tpm/tpm'
