make kitty config more readable and make some additions

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,9 +1,32 @@
+# Terminal styling
 background_opacity 0.9
+dynamic_background_opacity yes
+hide_window_decorations yes
+term xterm-256color
+
+# fonts
+font_size 12.5
 font_family FiraCode Nerd Font
 disable_ligatures never
-font_size 12.5
-enable_audio_bell no
-detect_urls yes
+
+# shell and editor settings
 shell zsh
 editor nvim
-hide_window_decorations yes
+
+# url settings
+url_style curly
+open_url_with default
+detect_urls yes
+
+# Mouse settings
+mouse_hide_wait 1.0
+
+# disable notify bell
+enable_audio_bell no
+
+# Copy on select (like tmux)
+copy_on_select clipboard
+
+# Scrollback
+scrollback_lines 10000
+scrollback_pager_history_size 10
